# MilkyWayOS

./: README.md
scripts/: bash_profile  build-image.sh  milkywayos-session.sh
starlight/: CMakeLists.txt  display.c  draw.c  input.c  main.c  nebula.c  nova.c  pulsar.c  starlight.c  starlight.h  sysinfo.c  taskbar.c  window.c
